--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # core deps
 numpy==1.22.0;python_version<="3.10"
 numpy>=1.24.3;python_version>"3.10"
-cython>=0.29.30
+cython==0.29.30
 scipy>=1.11.2
 torch>=2.1
 torchaudio
